@@ -3,6 +3,7 @@
 *** eiskaltdcpp-qt ***
 *** eiskaltdcpp-gtk ***
 *** eiskaltdcpp-daemon ***
+* Added command line options: --verbose, --port, --rpclog, --uripath
 *** eiskaltdcpp-cli ***
 
 --- 2.2.4 2011-10-02 ---
